blog: generate rss feeds
feed.xml is from https://github.com/snaptortoise/jekyll-rss-feeds.

Signed-off-by: huntxu <mhuntxu@gmail.com>

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
+name: Hunt's blog
+description: 伤情处，高城望断，灯火已黄昏…
+url: http://huntxu.github.io
+
 timezone: Asia/Hong_Kong
 
 permalink: /:year-:month-:day-:title.html
