config: update Markdown processor to kramdown
Signed-off-by: Hunt Xu <mhuntxu@gmail.com>

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ paginate_path: "page:num"
 
 permalink: /:year-:month-:day-:title.html
 
-markdown: redcarpet
+markdown: kramdown
 
 redcarpet:
     extensions: [
